--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'org.asciidoctor.convert' version '1.5.3'
-	id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
+	id 'org.springframework.boot' version '2.1.7.RELEASE'
 	id 'java'
 	id "nebula.facet" version "6.0.3"
 }
@@ -8,7 +8,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group = 'org.manuel'
-version = '0.0.1-SNAPSHOT'
+version = '0.1.0-SNAPSHOT'
 sourceCompatibility = '11'
 
 facets {
@@ -39,28 +39,33 @@ ext {
 dependencies {
 
 	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok:1.18.8'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		exclude group: 'junit', module: 'junit'
 	}
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	testImplementation 'org.springframework.security:spring-security-test'
-
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+	testImplementation 'org.json:json:20180813'
+	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.9'
+	testImplementation 'org.mockito:mockito-core'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
 
 	restDocTestImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		exclude group: 'junit', module: 'junit'
 	}
+	restDocTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
 	restDocTestImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	restDocTestImplementation 'org.springframework.security:spring-security-test'
+	restDocTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
 }
 
 test {
