Draft with MongoDB

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'org.asciidoctor.convert' version '1.5.3'
-	id 'org.springframework.boot' version '2.1.7.RELEASE'
+	id 'org.springframework.boot' version '2.0.0.BUILD-SNAPSHOT'
 	id 'java'
 	id "nebula.facet" version "6.0.3"
 }
@@ -12,8 +12,13 @@ version = '0.1.0-SNAPSHOT'
 sourceCompatibility = '11'
 
 facets {
-	restDocTest {
+	integrationTest {
 		parentSourceSet = 'main'
+		testTaskName = 'integrationTest'
+		includeInCheckLifecycle = true
+	}
+	restDocTest {
+		parentSourceSet = 'integrationTest'
 		testTaskName = 'restDocTest'
 		includeInCheckLifecycle = true
 	}
@@ -43,6 +48,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-oauth2-client'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
 	compileOnly 'org.projectlombok:lombok:1.18.8'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -55,26 +62,36 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
 	testImplementation 'org.json:json:20180813'
 	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.9'
+	testImplementation 'org.mockito:mockito-junit-jupiter:3.0.0'
 	testImplementation 'org.mockito:mockito-core'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
 
-	restDocTestImplementation('org.springframework.boot:spring-boot-starter-test') {
+	integrationTestImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		exclude group: 'junit', module: 'junit'
 	}
-	restDocTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+	integrationTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+	integrationTestImplementation 'org.springframework.security:spring-security-test'
+	integrationTestImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	integrationTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+
 	restDocTestImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	restDocTestImplementation 'org.springframework.security:spring-security-test'
 	restDocTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+
 }
 
 test {
 	useJUnitPlatform()
 }
 
+integrationTest {
+	useJUnitPlatform()
+}
+
 restDocTest {
 	outputs.dir snippetsDir
 	useJUnitPlatform()
+	dependsOn integrationTest
 }
 
 asciidoctor {
