--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,20 @@
+# @see https://console.developers.google.com/apis/ to create your client credentials
+logging.level.org.springframework: INFO
 spring:
-  security.oauth2.client.registration.google:
-    client-id: "318145913734-n58mtpcgt54rq5ni4rb4bpaf3huf5tfq.apps.googleusercontent.com"
-    client-secret: "8QkVM2rqPSM3US-8t2nvCFrt"
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            provider: google
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
+            client-authentication-method: basic
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+              - email
+              - profile
+        provider:
+          google:
+            issuer-uri: https://accounts.google.com
