--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Alpha6'
+	implementation 'com.google.api-client:google-api-client:1.30.2'
+	implementation 'com.google.api-client:google-api-client-jackson2:1.30.2'
 	compileOnly 'org.projectlombok:lombok:1.18.8'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
