--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-	id 'org.asciidoctor.convert' version '1.5.3'
 	id 'org.springframework.boot' version '2.0.0.BUILD-SNAPSHOT'
 	id 'java'
 	id "nebula.facet" version "6.0.3"
@@ -15,11 +14,6 @@ facets {
 	integrationTest {
 		parentSourceSet = 'main'
 		testTaskName = 'integrationTest'
-		includeInCheckLifecycle = true
-	}
-	restDocTest {
-		parentSourceSet = 'integrationTest'
-		testTaskName = 'restDocTest'
 		includeInCheckLifecycle = true
 	}
 }
@@ -56,6 +50,8 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Alpha6'
 	implementation 'com.google.api-client:google-api-client:1.30.2'
 	implementation 'com.google.api-client:google-api-client-jackson2:1.30.2'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	compileOnly 'org.projectlombok:lombok:1.18.8'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -76,9 +72,6 @@ dependencies {
 	integrationTestImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 	integrationTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
 
-	restDocTestImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	restDocTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
-
 }
 
 test {
@@ -87,22 +80,4 @@ test {
 
 integrationTest {
 	useJUnitPlatform()
-}
-
-restDocTest {
-	outputs.dir snippetsDir
-	useJUnitPlatform()
-	dependsOn integrationTest
-}
-
-asciidoctor {
-	inputs.dir snippetsDir
-	dependsOn restDocTest
-}
-
-bootJar {
-	dependsOn asciidoctor
-	from ("${asciidoctor.outputDir}/html5") {
-		into 'static/docs'
-	}
 }
