--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+	implementation 'pl.jsolve:typeconverter:1.0.1'
+
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Alpha6'
 	implementation 'com.google.api-client:google-api-client:1.30.2'
 	implementation 'com.google.api-client:google-api-client-jackson2:1.30.2'
