--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	implementation 'com.google.firebase:firebase-admin:6.11.0'
+
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
 	testImplementation 'org.json:json:20180813'
 	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.9'
