--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
-version: '2'
+version: '3'
 services:
   mongo:
     container_name: mongo
     image: mongo
     ports:
       - "27017:27017"
+
+  mysportfolio:
+    image: mysportfolio:1
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    volumes:
+      - /data/mysportfolio
+    ports:
+      - "8080:8080"
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017/mysportfolio
+    depends_on:
+      - mongo
