--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "27017:27017"
 
   mysportfolio:
-    image: mysportfolio:latest
+    image: mysportfolio:${TAG}
     build:
       context: ./
       dockerfile: Dockerfile
@@ -15,6 +15,8 @@ services:
       - /data/mysportfolio
     ports:
       - "8080:8080"
+    #env_file:
+    #  - ./prod.env
     environment:
       - MONGODB_URI=mongodb://mongo:27017/mysportfolio
     depends_on:
