--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 	implementation 'pl.jsolve:typeconverter:1.0.1'
+	implementation 'org.aspectj:aspectjrt:1.9.4'
+	implementation 'org.aspectj:aspectjweaver:1.9.4'
 
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Alpha6'
 	implementation 'com.google.api-client:google-api-client:1.30.2'
