--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group = 'org.manuel'
-version = '0.2.4-SNAPSHOT'
+version = '0.2.4'
 sourceCompatibility = '11'
 
 facets {
