--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.0.0.BUILD-SNAPSHOT'
+    id 'org.springframework.boot' version '2.2.2.RELEASE'
     id 'java'
     id "nebula.facet" version "6.0.3"
     id 'com.google.cloud.tools.jib' version '1.8.0'
@@ -46,22 +46,22 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
     implementation 'pl.jsolve:typeconverter:1.0.1'
-    implementation 'org.aspectj:aspectjrt:1.9.4'
-    implementation 'org.aspectj:aspectjweaver:1.9.4'
+    implementation 'org.aspectj:aspectjrt:1.9.5'
+    implementation 'org.aspectj:aspectjweaver:1.9.5'
 
-    implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Alpha6'
-    implementation 'com.google.api-client:google-api-client:1.30.2'
-    implementation 'com.google.api-client:google-api-client-jackson2:1.30.2'
+    implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Final'
+    implementation 'com.google.api-client:google-api-client:1.30.7'
+    implementation 'com.google.api-client:google-api-client-jackson2:1.30.7'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-    implementation 'com.google.firebase:firebase-admin:6.11.0'
+    implementation 'com.google.firebase:firebase-admin:6.12.0'
 
-    testImplementation 'org.json:json:20180813'
-    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.9'
+    testImplementation 'org.json:json:20190722'
+    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.11'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0-M1'
     testImplementation 'org.mockito:mockito-core'
