--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs: # a collection of steps
           command: |
             # export PROJECT_VERSION=`./gradlew properties -q | grep "version:" | awk '{print $2}'`
             # echo PROJECT_VERSION=$PROJECT_VERSION >> $BASH_ENV
-            export DOCKER_TAG=`date`
+            export DOCKER_TAG=`date +%s`
             echo DOCKER_TAG=$DOCKER_TAG >> $BASH_ENV
             source $BASH_ENV
       - gcr/gcr-auth
