- Changing circleci workflow

--- a/build.gradle
+++ b/build.gradle
@@ -94,3 +94,9 @@ integrationTest {
 springBoot {
     buildInfo()
 }
+
+jib {
+    container {
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+    }
+}
