--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,24 +62,20 @@ jobs: # a collection of steps
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   Build-Push-Image-Docker:
     description: Build and push image to Google Container Registry
-    machine: true
+    docker: # run the steps with Docker
+      - image: circleci/openjdk:11.0.4-jdk-stretch
     steps:
       - checkout
+      - gcr/gcr-auth
       - run:
-          name: Set project version environment variable
+          name: Set project version environment variable and upload docker image
           command: |
-            # export PROJECT_VERSION=`./gradlew properties -q | grep "version:" | awk '{print $2}'`
-            # echo PROJECT_VERSION=$PROJECT_VERSION >> $BASH_ENV
-            export DOCKER_TAG=`date +%s`
+            # export DOCKER_TAG=`date +%s`
+            # echo DOCKER_TAG=$DOCKER_TAG >> $BASH_ENV
+            export DOCKER_TAG=`./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}'`
             echo DOCKER_TAG=$DOCKER_TAG >> $BASH_ENV
             source $BASH_ENV
-      - gcr/gcr-auth
-      - gcr/build-image:
-          image: mysportfolio
-          tag: $DOCKER_TAG
-      - gcr/push-image:
-          image: mysportfolio
-          tag: $DOCKER_TAG
+            ./gradlew jib -Djib.to.image=gcr.io/$GOOGLE_PROJECT_ID/mysportfolio:$DOCKER_TAG
 workflows:
   version: 2.1
   workflow:
@@ -87,10 +83,10 @@ workflows:
       - build:
           context: MySportfolioDEV
       - Build-Push-Image-Docker:
-          context: MySportfolioDEV
+          context: MySportfolio
           requires:
             - build
           filters:
             branches:
               only:
-                - develop
+                - master
