--- a/build.gradle
+++ b/build.gradle
@@ -90,10 +90,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-admin:6.12.0'
 
     testImplementation 'org.json:json:20190722'
-    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.11'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0-M1'
     testImplementation 'org.mockito:mockito-core'
+    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
+    testImplementation 'org.mutabilitydetector:MutabilityDetector:0.10.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0-M1'
 
     integrationTestImplementation('org.springframework.boot:spring-boot-starter-test') {
