--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs: # a collection of steps
       _JAVA_OPTIONS: "-Xmx3g"
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
     docker: # run the steps with Docker
-      - image: circleci/openjdk:11.0.4-jdk-stretch # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/openjdk:13.0.2-jdk-buster # ...with this image as the primary container; this is where all `steps` will run
     steps: # a collection of executable commands
       - checkout # check out source code to working directory
       # Read about caching dependencies: https://circleci.com/docs/2.1/caching/
@@ -63,7 +63,7 @@ jobs: # a collection of steps
   Build-Push-Image-Docker:
     description: Build and push image to Google Container Registry
     docker: # run the steps with Docker
-      - image: circleci/openjdk:11.0.4-jdk-stretch
+      - image: circleci/openjdk:13.0.2-jdk-buster
     steps:
       - checkout
       - gcr/gcr-auth
