--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
-    id "nebula.facet" version "6.0.3"
+    id "nebula.facet" version "7.0.8"
     id 'com.google.cloud.tools.jib' version '2.1.0'
     id 'com.palantir.git-version' version '0.12.3'
     id 'checkstyle'
@@ -56,10 +56,11 @@ repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
     maven { url 'https://repo.spring.io/snapshot' }
+    maven { url "https://dl.bintray.com/manueldoncelmartos/query-parameter" }
 }
 
 // https://stackoverflow.com/questions/54598484/gradle-5-junit-bom-and-spring-boot-incorrect-versions
-ext['junit-jupiter.version'] = '5.6.0-M1'
+ext['junit-jupiter.version'] = '5.6.2'
 
 dependencies {
 
@@ -84,6 +85,8 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-jackson2:1.30.7'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.github.manuelarte.spring:query-parameter-model:0.0.1'
+    implementation 'io.github.manuelarte.spring:query-parameter-mongo:0.0.1'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
@@ -91,20 +94,20 @@ dependencies {
 
     testImplementation 'org.json:json:20190722'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.2.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0-M1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
     testImplementation 'org.mutabilitydetector:MutabilityDetector:0.10.3'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0-M1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 
     integrationTestImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         exclude group: 'junit', module: 'junit'
     }
-    integrationTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    integrationTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     integrationTestImplementation 'org.springframework.security:spring-security-test'
     integrationTestImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
-    integrationTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+    integrationTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 
 }
 
