--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ repositories {
     maven { url 'https://repo.spring.io/milestone' }
     maven { url 'https://repo.spring.io/snapshot' }
     maven { url "https://dl.bintray.com/manueldoncelmartos/query-parameter" }
+    maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 // https://stackoverflow.com/questions/54598484/gradle-5-junit-bom-and-spring-boot-incorrect-versions
@@ -85,6 +86,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-jackson2:1.30.7'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.github.manuelarte.spring:manuelarte-validation:0.0.1-SNAPSHOT'
     implementation 'io.github.manuelarte.spring:query-parameter-model:0.0.1'
     implementation 'io.github.manuelarte.spring:query-parameter-mongo:0.0.1'
     compileOnly 'org.projectlombok:lombok'
@@ -102,12 +104,9 @@ dependencies {
 
     integrationTestImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-        exclude group: 'junit', module: 'junit'
     }
-    integrationTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     integrationTestImplementation 'org.springframework.security:spring-security-test'
     integrationTestImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
-    integrationTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 
 }
 
