--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,6 @@ repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
     maven { url 'https://repo.spring.io/snapshot' }
-    maven { url "https://dl.bintray.com/manueldoncelmartos/query-parameter" }
     maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
@@ -86,9 +85,9 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-jackson2:1.30.7'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-    implementation 'io.github.manuelarte.spring:manuelarte-validation:0.0.1-SNAPSHOT'
+    implementation 'io.github.manuelarte.spring:manuelarte-validation:0.0.1'
     implementation 'io.github.manuelarte.spring:query-parameter-model:0.0.1'
-    implementation 'io.github.manuelarte.spring:query-parameter-mongo:0.0.1'
+    implementation 'io.github.manuelarte.spring:query-parameter-mongo:0.0.1-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
