Adding project version in buildSrc

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import io.github.manuelarte.spring.ProjectVersion
+
 plugins {
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
@@ -13,24 +15,7 @@ ext.gitDetails = versionDetails()
 
 ProjectVersion readVersion() {
     logger.quiet 'Reading version file.'
-
-    if (!versionFile.exists()) {
-        throw new GradleException("Required version file does not exist: $versionFile.canonicalPath")
-    }
-
-    Properties versionProps = new Properties()
-
-    versionFile.withInputStream { stream -> versionProps.load(stream) }
-    def release = Boolean.FALSE
-    if (versionProps.release != null) {
-        release = versionProps.release.toBoolean()
-    } else {
-        if (gitDetails.branchName == 'master') {
-            release = Boolean.TRUE
-        }
-    }
-    new ProjectVersion(versionProps.major.toInteger(), versionProps.minor.toInteger(),
-            versionProps.bugFix.toInteger(), release)
+    ProjectVersion.readVersion(versionFile, gitDetails)
 }
 
 group = 'org.manuel'
@@ -124,28 +109,5 @@ springBoot {
 jib {
     container {
         creationTime = 'USE_CURRENT_TIMESTAMP'
-    }
-}
-
-class ProjectVersion {
-    Integer major
-    Integer minor
-    Integer bugFix
-    Boolean release
-
-    ProjectVersion(Integer major, Integer minor, Integer bugFix) {
-        this(major, minor, bugFix, Boolean.FALSE)
-    }
-
-    ProjectVersion(Integer major, Integer minor, Integer bugFix, Boolean release) {
-        this.major = major
-        this.minor = minor
-        this.bugFix = bugFix
-        this.release = release
-    }
-
-    @Override
-    String toString() {
-        "$major.$minor.$bugFix${release ? '' :  '-SNAPSHOT'}"
     }
 }
