--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,6 @@ configurations {
 repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
-    maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
@@ -66,9 +65,9 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-jackson2:1.30.7'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-    implementation 'io.github.manuelarte.spring:manuelarte-validation:0.0.2-SNAPSHOT'
-    implementation 'io.github.manuelarte.spring:query-parameter-model:0.0.2-SNAPSHOT'
-    implementation 'io.github.manuelarte.spring:query-parameter-mongo:0.0.2-SNAPSHOT'
+    implementation 'io.github.manuelarte.spring:manuelarte-validation:0.0.2'
+    implementation 'io.github.manuelarte.spring:query-parameter-model:0.0.2'
+    implementation 'io.github.manuelarte.spring:query-parameter-mongo:0.0.2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
