--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,9 @@ springBoot {
 }
 
 jib {
+    from {
+        image = 'openjdk:13'
+    }
     container {
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
