- Adding @UserExists - Adding constants - Adding put in UserTeams

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring:
     mongodb:
       uri: ${MONGODB_URI:mongodb://localhost:27017/mysportfolio}
       auto-index-creation: true
+server:
+  port: ${SERVER_PORT:8080}
