--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'com.google.firebase:firebase-admin:6.12.0'
+    implementation 'com.google.firebase:firebase-admin:7.0.1'
 
     testImplementation 'org.json:json:20200518'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.4.6'
@@ -108,6 +108,9 @@ springBoot {
 jib {
     from {
         image = 'openjdk:13'
+    }
+    to {
+        image = "gcr.io/mysportfolio-backend/$name:$version"
     }
     container {
         creationTime = 'USE_CURRENT_TIMESTAMP'
