--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,58 @@ spring:
       auto-index-creation: true
 server:
   port: ${SERVER_PORT:8080}
+
+user:
+  restrictions:
+    FREE:
+      teams:
+        - maxNumber: 1
+          in: P1Y
+          function: BEGINNING_YEAR
+      competitions:
+        - maxNumber: 1
+          in: P1Y
+          function: BEGINNING_YEAR
+      matches:
+        - maxNumber: 1
+          in: P1W
+          function: BEGINNING_WEEK
+    NOOB:
+      teams:
+        - maxNumber: 2
+          in: P1Y
+          function: BEGINNING_YEAR
+      competitions:
+        - maxNumber: 2
+          in: P1Y
+          function: BEGINNING_YEAR
+      matches:
+        - maxNumber: 2
+          in: P1W
+          function: BEGINNING_WEEK
+    ADVANCE:
+      teams:
+        - maxNumber: 4
+          in: P1Y
+          function: BEGINNING_YEAR
+      competitions:
+        - maxNumber: 3
+          in: P1Y
+          function: BEGINNING_YEAR
+      matches:
+        - maxNumber: 3
+          in: P1W
+          function: BEGINNING_WEEK
+    PREMIUM:
+      teams:
+        - maxNumber: 10
+          in: P1Y
+          function: BEGINNING_YEAR
+      competitions:
+        - maxNumber: 4
+          in: P1Y
+          function: BEGINNING_YEAR
+      matches:
+        - maxNumber: 4
+          in: P1W
+          function: BEGINNING_WEEK
