--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
 server:
   port: ${SERVER_PORT:8080}
 
+management.endpoints.web.exposure.include: health,info,httptrace
+
 user:
   restrictions:
     FREE:
